--- a/app/src/main/res/layout/item_history_viewholder.xml
+++ b/app/src/main/res/layout/item_history_viewholder.xml
@@ -35,24 +35,20 @@
             android:textSize="19sp" />
 
         <TextView
+            style="@style/HistoryStyle"
             android:id="@+id/correct_answers_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
             android:layout_marginTop="38dp"
-            android:fontFamily="@font/sf_pro_display_light"
-            android:text="@string/correct_answers"
-            android:textSize="14sp" />
+            android:text="@string/correct_answers" />
 
         <TextView
+            style="@style/HistoryStyle"
             android:id="@+id/difficulty_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
             android:layout_marginTop="60dp"
-            android:fontFamily="@font/sf_pro_display_light"
-            android:text="@string/difficulty_easy"
-            android:textSize="14sp" />
+            android:text="@string/difficulty_easy" />
 
         <TextView
             android:id="@+id/history_time_text_view"
