--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -27,6 +27,7 @@
         android:layout_marginStart="@dimen/extra_big_margin_1"
         android:layout_marginTop="@dimen/extra_big_margin_1"
         android:layout_marginEnd="@dimen/extra_big_margin_3"
+        android:ellipsize="marquee"
         android:fontFamily="@font/sf_text_semi_bold"
         android:text="Geography"
         android:textAlignment="center"
@@ -50,11 +51,11 @@
         android:id="@+id/skip_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="77dp"
         android:text="Skip"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        android:layout_marginBottom="77dp"
         app:layout_constraintStart_toStartOf="@+id/quiz_recycler_view"
         app:layout_constraintTop_toBottomOf="@id/quiz_recycler_view"
         app:layout_constraintVertical_bias="0.831" />
