--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -37,27 +37,57 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ProgressBar
+        android:id="@+id/quiz_progress_bar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:progress="20"
+        android:max="50"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="100dp"
+        app:layout_constraintTop_toBottomOf="@+id/navigation" />
+
+    <TextView
+        android:id="@+id/quiz_question_amount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="5/10"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/quiz_progress_bar" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/quiz_recycler_view"
         android:layout_width="match_parent"
+        android:layout_marginTop="31dp"
         android:layout_height="0dp"
         android:scrollbars="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/skip_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/navigation" />
+        app:layout_constraintTop_toBottomOf="@+id/quiz_question_amount" />
 
     <Button
         android:id="@+id/skip_button"
-        android:layout_width="wrap_content"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="77dp"
-        android:text="Skip"
+        android:background="@drawable/skip_button_style"
+        android:fontFamily="@font/sf_pro_display_heavy"
+        android:lineHeight="18dp"
+        android:text="@string/skip"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="@dimen/medium_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/quiz_recycler_view"
         app:layout_constraintTop_toBottomOf="@id/quiz_recycler_view"
-        app:layout_constraintVertical_bias="0.831" />
+        app:layout_constraintVertical_bias="0.831"
+        tools:targetApi="p" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
