--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -40,13 +40,13 @@
     <ProgressBar
         android:id="@+id/quiz_progress_bar"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:progress="20"
-        android:max="50"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginTop="29dp"
         android:layout_marginEnd="100dp"
+        android:max="50"
+        android:progress="20"
         app:layout_constraintTop_toBottomOf="@+id/navigation" />
 
     <TextView
@@ -62,8 +62,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/quiz_recycler_view"
         android:layout_width="match_parent"
-        android:layout_marginTop="31dp"
         android:layout_height="0dp"
+        android:layout_marginTop="@dimen/extra_big_margin_default"
         android:scrollbars="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/skip_button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +77,6 @@
         android:layout_marginBottom="77dp"
         android:background="@drawable/skip_button_style"
         android:fontFamily="@font/sf_pro_display_heavy"
-        android:lineHeight="18dp"
         android:text="@string/skip"
         android:textAllCaps="false"
         android:textColor="@color/white"
@@ -87,7 +86,6 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/quiz_recycler_view"
         app:layout_constraintTop_toBottomOf="@id/quiz_recycler_view"
-        app:layout_constraintVertical_bias="0.831"
-        tools:targetApi="p" />
+        app:layout_constraintVertical_bias="0.831" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
