--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <dimen name="extra_small_margin">5dp</dimen>
+    <dimen name="extra_small_margin_2">6dp</dimen>
     <dimen name="extra_small_margin_1">12dp</dimen>
     <dimen name="small_margin">16dp</dimen>
     <dimen name="small_margin_1">22dp</dimen>
@@ -10,10 +11,11 @@
     <dimen name="big_margin">29dp</dimen>
     <dimen name="big_margin_1">30dp</dimen>
 
+    <dimen name="extra_big_margin_default">31dp</dimen>
     <dimen name="extra_big_margin">32dp</dimen>
-    <dimen name="extra_big_margin_3">40dp</dimen>
-    <dimen name="extra_big_margin_2">43dp</dimen>
     <dimen name="extra_big_margin_1">48dp</dimen>
+    <dimen name="extra_big_margin_2">43dp</dimen>
+    <dimen name="extra_big_margin_3">40dp</dimen>
     <dimen name="extra_big_margin_4">190dp</dimen>
 
     <dimen name="spinner_small_margin">5dp</dimen>
