--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -71,5 +71,15 @@
         <item name="android:textSize">14sp</item>
         <item name="android:layout_marginStart">@dimen/extra_small_margin_1</item>
     </style>
+    
+    <style name="QuizQuestionAnswers">
+        <item name="android:paddingTop">9dp</item>
+        <item name="android:paddingBottom">9dp</item>
+        <item name="android:layout_marginEnd">51dp</item>
+        <item name="android:layout_marginStart">51dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/sf_text_semi_bold</item>
+    </style>
 </resources>
 
