--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="colorOfStatusBar">#FFFFFF</color>
     <color name="colorAmount">#3F3356</color>
     <color name="colorOfTitleQuizActivity">#1A051D</color>
+    <color name="colorResultText">#1F2041</color>
 </resources>
