--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -11,6 +11,7 @@
         style="@style/TextTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="23dp"
         android:text="@string/result"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,13 +19,13 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottie"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/result_text_title"
-        app:lottie_rawRes="@raw/ic_ok"
         app:lottie_autoPlay="true"
-        android:layout_width="150dp"
-        android:layout_height="150dp"/>
+        app:lottie_rawRes="@raw/ic_ok" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/result_card_view"
@@ -107,11 +108,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:layout_marginBottom="62dp"
                 android:fontFamily="@font/sf_pro_text_bold"
                 android:text="@string/_0_0"
                 android:textColor="@color/colorAmount"
                 android:textSize="15sp"
-                android:layout_marginBottom="62dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/result_correct_ans"
                 app:layout_constraintStart_toStartOf="@+id/result_correct_ans"
@@ -135,14 +136,15 @@
     </androidx.cardview.widget.CardView>
 
     <Button
-        android:background="@drawable/result_finish_button_style"
+        android:id="@+id/result_button_finish"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/result_finish_button_style"
+        android:fontFamily="@font/sf_pro_display_heavy"
         android:text="@string/finish"
         android:textAllCaps="false"
-        android:textSize="@dimen/medium_text"
-        android:fontFamily="@font/sf_pro_display_heavy"
         android:textColor="@color/colorPrimary"
+        android:textSize="@dimen/medium_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/result_card_view"
         app:layout_constraintStart_toStartOf="@+id/result_card_view"
