--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -119,7 +119,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/result_correct_ans" />
 
             <TextView
-                android:id="@+id/result_per"
+                android:id="@+id/result_percents"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/sf_pro_text_bold"
