--- a/app/src/main/res/layout/item_history_viewholder.xml
+++ b/app/src/main/res/layout/item_history_viewholder.xml
@@ -23,16 +23,18 @@
 
         <TextView
             android:id="@+id/category_text_view_history"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="40dp"
             android:layout_marginStart="12dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="12dp"
             android:fontFamily="@font/sf_text_semi_bold"
             android:text="@string/category"
-            android:ellipsize="end"
-            android:maxLines="1"
+            android:ellipsize="marquee"
+            android:focusable="true"
             android:textColor="@color/colorOfTextViewQuiz"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            android:singleLine="true" />
 
         <TextView
             style="@style/HistoryStyle"
