--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,4 +38,7 @@
     <dimen name="elevation">6dp</dimen>
     <dimen name="elevation_2">8dp</dimen>
 
+    <dimen name="seek_bar_thickness">5dp</dimen>
+    <dimen name="seek_bar_thumb_size">20dp</dimen>
+
 </resources>
