fixed crash on loading data

--- a/app/src/main/res/layout/item_quiz_viewholder.xml
+++ b/app/src/main/res/layout/item_quiz_viewholder.xml
@@ -19,73 +19,81 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <TextView
-        android:id="@+id/quiz_question_boolean_1"
-        style="@style/QuizQuestionAnswers"
+    <LinearLayout
+        android:id="@+id/container_boolean"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="65dp"
-        android:background="@drawable/quiz_answer_view_white"
-        android:text="Yes"
-        android:visibility="invisible"
-        android:textColor="@color/colorOfStartButtonBackground"
-        app:layout_constraintTop_toBottomOf="@id/quiz_question" />
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/quiz_question">
 
-    <TextView
-        android:id="@+id/quiz_question_boolean_2"
-        style="@style/QuizQuestionAnswers"
+        <TextView
+            android:id="@+id/quiz_question_boolean_1"
+            style="@style/QuizQuestionAnswers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="65dp"
+            android:background="@drawable/quiz_answer_view_white"
+            android:text="Yes"
+            android:textColor="@color/colorOfStartButtonBackground"/>
+
+        <TextView
+            android:id="@+id/quiz_question_boolean_2"
+            style="@style/QuizQuestionAnswers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/extra_small_margin_2"
+            android:background="@drawable/quiz_answer_view_white"
+            android:text="No"
+            android:textColor="@color/colorOfStartButtonBackground" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/container_multiple"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/extra_small_margin_2"
-        android:background="@drawable/quiz_answer_view_white"
-        android:text="No"
-        android:visibility="invisible"
-        android:textColor="@color/colorOfStartButtonBackground"
-        app:layout_constraintTop_toBottomOf="@+id/quiz_question_boolean_1" />
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/quiz_question">
 
-    <TextView
-        android:id="@+id/quiz_question_answer_1"
-        style="@style/QuizQuestionAnswers"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/extra_big_margin_2"
-        android:background="@drawable/quiz_answer_view_white"
-        android:text="Colombo"
-        android:textColor="@color/colorOfStartButtonBackground"
-        app:layout_constraintTop_toBottomOf="@id/quiz_question" />
+        <TextView
+            android:id="@+id/quiz_question_answer_1"
+            style="@style/QuizQuestionAnswers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/extra_big_margin_2"
+            android:background="@drawable/quiz_answer_view_white"
+            android:text="Colombo"
+            android:textColor="@color/colorOfStartButtonBackground" />
 
-    <TextView
-        android:id="@+id/quiz_question_answer_2"
-        style="@style/QuizQuestionAnswers"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/extra_small_margin_2"
-        android:background="@drawable/quiz_answer_view_white"
-        android:text="Moratuwa"
-        android:textColor="@color/colorOfStartButtonBackground"
-        app:layout_constraintTop_toBottomOf="@+id/quiz_question_answer_1" />
+        <TextView
+            android:id="@+id/quiz_question_answer_2"
+            style="@style/QuizQuestionAnswers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/extra_small_margin_2"
+            android:background="@drawable/quiz_answer_view_white"
+            android:text="Moratuwa"
+            android:textColor="@color/colorOfStartButtonBackground" />
 
-    <TextView
-        android:id="@+id/quiz_question_answer_3"
-        style="@style/QuizQuestionAnswers"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/extra_small_margin_2"
-        android:background="@drawable/quiz_answer_view_white"
-        android:text="Negombo"
-        android:textColor="@color/colorOfStartButtonBackground"
-        app:layout_constraintTop_toBottomOf="@+id/quiz_question_answer_2" />
+        <TextView
+            android:id="@+id/quiz_question_answer_3"
+            style="@style/QuizQuestionAnswers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/extra_small_margin_2"
+            android:background="@drawable/quiz_answer_view_white"
+            android:text="Negombo"
+            android:textColor="@color/colorOfStartButtonBackground" />
 
-    <TextView
-        android:id="@+id/quiz_question_answer_4"
-        style="@style/QuizQuestionAnswers"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/extra_small_margin_2"
-        android:background="@drawable/quiz_answer_view_white"
-        android:text="Kandy"
-        android:textColor="@color/colorOfStartButtonBackground"
-        app:layout_constraintTop_toBottomOf="@+id/quiz_question_answer_3" />
+        <TextView
+            android:id="@+id/quiz_question_answer_4"
+            style="@style/QuizQuestionAnswers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/extra_small_margin_2"
+            android:background="@drawable/quiz_answer_view_white"
+            android:text="Kandy"
+            android:textColor="@color/colorOfStartButtonBackground" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
