--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -51,6 +51,7 @@
         android:layout_marginEnd="100dp"
         android:max="50"
         android:progress="20"
+        android:progressDrawable="@drawable/seek_bar"
         app:layout_constraintTop_toBottomOf="@+id/navigation" />
 
     <TextView
