--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -38,6 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/share_app"
+        android:clickable="true"
         android:textColor="@color/colorOfTextViewQuiz"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view" />
@@ -65,6 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/rate_us"
+        android:clickable="true"
         android:textColor="@color/colorOfTextViewQuiz"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view2" />
@@ -92,6 +94,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/leave_feedback"
+        android:clickable="true"
         android:textColor="@color/colorOfTextViewQuiz"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view3" />
@@ -119,6 +122,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/clear_history"
+        android:clickable="true"
         android:textColor="@color/colorOfBottomNavIconSelected"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view4" />
